<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/App1Theme"
    android:orientation="vertical"
    tools:context=".view.Location_detail">

    <LinearLayout
        android:id="@+id/updatelol"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <TextView
            android:id="@+id/gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textColor="#fafafa"
            android:visibility="gone"
            android:textSize="20sp"
            android:text="@string/cancel">
        </TextView>

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_arrow_back_white_24dp">
            </ImageView>

        </FrameLayout>


        <!--    <ImageView
                android:id="@+id/gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@null"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_close_black_24dp">
            </ImageView>
    -->

        <TextView
            android:id="@+id/toolbartext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#fafafa"
            android:gravity="center"
            android:maxLines="1"
            android:layout_weight="1">

        </TextView>
    <!--    <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </View>-->

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp">

            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_edit_black_24dp"
                tools:ignore="PrivateResource">
            </ImageView>

            <TextView
                android:id="@+id/tick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:visibility="gone"
                android:textSize="20sp"
                android:text="@string/done">
            </TextView>

        <!--    <ImageView
                android:id="@+id/tick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_done_black_24dp">

            </ImageView>-->


        </FrameLayout>

    </LinearLayout>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">
    </androidx.fragment.app.FragmentContainerView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:transitionName="tname"
                    android:textStyle="bold" />



                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:switchMinWidth="40dp"
                        android:layout_gravity="top"
                        app:thumbTint="#fafafa"
                        app:trackTint="@color/checker_track"
                        >

                    </com.google.android.material.switchmaterial.SwitchMaterial>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="#5d5d5d" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:textColor="#000000"

            android:drawablePadding="16dp"
             />



            <TextView
                android:id="@+id/pluscode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableStart="@drawable/ic_navigation_black_24dp"
                android:drawablePadding="16dp"
                android:textColor="#0645AD"
                android:clickable="true"
                android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="#000000"
            android:drawablePadding="16dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/update_radius" >

        </TextView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            android:layout_gravity="center"
            app:chipSpacingHorizontal="40dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:textColor="@color/bg_chip_state_text_color"

                app:chipStartPadding="5dp"
                android:text="@string/_0_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:textColor="@color/bg_chip_state_text_color"

                app:chipStartPadding="5dp"
                android:text="@string/_0_2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:textColor="@color/bg_chip_state_text_color"

                app:chipStartPadding="5dp"

                android:text="@string/_0_3" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip9"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:textColor="@color/bg_chip_state_text_color"
                app:chipStartPadding="5dp"

                android:text="@string/_0_5" />
        </com.google.android.material.chip.ChipGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"

                android:orientation="horizontal">




            <!--<TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Mode" >

            </TextView>-->

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:checkedChip="@id/silent1"
                app:singleSelection="true"
                app:chipSpacingHorizontal="40dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/silent1"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    app:chipBackgroundColor="@color/bg_chip_state_list"
                    android:textColor="@color/bg_chip_state_text_color"

                    app:chipStartPadding="5dp"
                    android:text="@string/silent" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/vibrate1"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    app:chipBackgroundColor="@color/bg_chip_state_list"
                    android:textColor="@color/bg_chip_state_text_color"

                    app:chipStartPadding="5dp"
                    android:text="@string/vibrate" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/normal1"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    app:chipBackgroundColor="@color/bg_chip_state_list"
                    android:textColor="@color/bg_chip_state_text_color"

                    app:chipStartPadding="5dp"
                    android:text="@string/normal" />

            </com.google.android.material.chip.ChipGroup>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/notify"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/notify_before_turning_on"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:textStyle="normal" />



                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/notify1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:switchMinWidth="40dp"
                    app:thumbTint="#fafafa"
                    app:trackTint="@color/checker_track"
                    >

                </com.google.android.material.switchmaterial.SwitchMaterial>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">



            <TextView
                android:id="@+id/autostop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/auto_stop_after_completion"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"
                android:text="@string/on_location_detail">

            </TextView>
        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_location_detail"
                android:clickable="true"
                android:textColor="#fff"
                android:focusable="true" />

        </LinearLayout>
</LinearLayout>

    </ScrollView>




</LinearLayout>
